[package]
name = "rustadex"
version = "0.1.0"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "Placeholder for the Rustadex framework. The unified facade for the rdx-* ecosystem of crates. Currently under active development."
license = "MIT"
repository = "https://github.com/rustadex/rustadex"
readme = "README.md"


[lib]
path = "src/lib.rs"


[dependencies]
